--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,5 +4,5 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
-  "compilerOptions": {"allowJs": true}
+  "compilerOptions": {"module": "esnext", "allowJs": true}
 }
