--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.10.0",
     "crypto": "^1.0.1",
     "date-fns-tz": "^3.2.0",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5"
