--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "crypto": "^1.0.1",
     "date-fns-tz": "^3.2.0",
+    "frappe-gantt": "^1.0.3",
     "jwt-decode": "^4.0.0",
     "qs": "^6.14.0",
     "react": "^19.1.0",
@@ -21,10 +22,12 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
     "react-scroll": "^1.9.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/frappe-gantt": "^0.9.0",
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
