--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "date-fns-tz": "^3.2.0",
     "frappe-gantt": "^1.0.3",
     "jwt-decode": "^4.0.0",
+    "plotly.js": "^3.0.1",
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.6.3",
     "react-scroll": "^1.9.3",
     "react-toastify": "^11.0.5",
@@ -31,6 +33,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-plotly.js": "^2.6.3",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
